--- a/res/layout/new_account_dialog.xml
+++ b/res/layout/new_account_dialog.xml
@@ -6,6 +6,27 @@
     android:orientation="vertical" >
 
     <TextView
+        android:id="@+id/TextView03"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="0.50"
+        android:text="@string/email"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <EditText
+        android:id="@+id/email"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_weight="0.50"
+        android:ems="10"
+        android:hint="@string/optional"
+        android:inputType="textEmailAddress" />
+
+    <TextView
         android:id="@+id/TextView01"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -44,35 +65,6 @@
         android:layout_weight="0.50"
         android:inputType="textPassword" >
     </EditText>
-
-    <ImageView
-        android:id="@+id/captcha_image"
-        android:layout_width="fill_parent"
-        android:layout_height="75dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_weight="50.20"
-        android:contentDescription="@string/captcha_code"
-        android:src="@android:drawable/ic_menu_view" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_weight="0.50"
-        android:text="@string/captcha"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <EditText
-        android:id="@+id/captcha"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_weight="0.50"
-        android:inputType="text|textPassword" />
 
     <Button
         android:id="@+id/create_button"
