--- a/res/menu/addresses_menu.xml
+++ b/res/menu/addresses_menu.xml
@@ -5,10 +5,17 @@
         android:id="@+id/addresses_menu_generate"
         android:showAsAction="never"
         android:title="@string/menu_addresses_generate_new"/>
+    
+    <item
+        android:id="@+id/addresses_menu_scan_private_key"
+        android:showAsAction="never"
+        android:title="@string/menu_scan_private_key"/>
+    
     <item
         android:id="@+id/addresses_menu_scan_watch_only"
         android:showAsAction="never"
         android:title="@string/menu_addresses_scan_watch_only"/>
+    
     <item
         android:id="@+id/addresses_menu_paste"
         android:showAsAction="never"
